--- a/index.html
+++ b/index.html
@@ -162,6 +162,21 @@
   </div>
 </section>
 
+<section id="sub-details" class="relative mt-64 border pt-72 pb-24 rounded-tr-[10rem] rounded-bl-[10rem]">
+  <!-- Phone mockups -->
+  <div class="absolute -top-60">
+    <img src="./images/illustration-phones.svg" alt="">
+  </div>
+  <!-- Flex Container Text -->
+  <div class="flex flex-col items-center mx-auto text-center max-w-sm space-y-6 lg:max-w-md">
+    <h1 class="text-5xl text-white">State of the Art Infrastructure</h1>
+    <p class="text-veryLightRedNav w-5/6 leading-8">
+        With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
+        This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+    </p>
+  </div>
+</section>
+
 
 
 
