updated the layout

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 </header>
 
 <!-- Design Section -->
-<section id="design" class="py-14 px-6 md:py-32 lg:px-32">
+<section id="design" class="py-14 px-6 md:py-52 lg:px-32 lg:mb-32">
   <!-- Heading -->
   <h1 class="text-4xl text-center mb-12 font-bold text-veryDarkBlue mt-20 md:mb-20">Designed for the future</h1>
   <!-- Container -->
@@ -162,15 +162,15 @@
   </div>
 </section>
 
-<section id="sub-details" class="relative mt-64 border pt-72 pb-24 rounded-tr-[10rem] rounded-bl-[10rem]">
+<section id="sub-details" class="relative flex items-center justify-center my-52 border pt-72 pb-24 rounded-tr-[10rem] rounded-bl-[10rem] lg:px-32 lg:py-14 lg:my-32">
   <!-- Phone mockups -->
-  <div class="absolute -top-60">
-    <img src="./images/illustration-phones.svg" alt="">
+  <div class="absolute -top-52 md:-top-12 md:left-20">
+    <img class="w-full lg:w-3/4" src="./images/illustration-phones.svg" alt="">
   </div>
   <!-- Flex Container Text -->
-  <div class="flex flex-col items-center mx-auto text-center max-w-sm space-y-6 lg:max-w-md">
-    <h1 class="text-5xl text-white">State of the Art Infrastructure</h1>
-    <p class="text-veryLightRedNav w-5/6 leading-8">
+  <div class="flex flex-col items-center text-center max-w-sm space-y-6 lg:max-w-lg lg:ml-auto lg:text-left lg:items-start">
+    <h1 class="text-5xl text-white lg:text-4xl">State of the Art Infrastructure</h1>
+    <p class="text-veryLightRedNav w-5/6 leading-8 lg:w-full">
         With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
         This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
     </p>
