added a new section

--- a/index.html
+++ b/index.html
@@ -162,18 +162,39 @@
   </div>
 </section>
 
-<section id="sub-details" class="relative flex items-center justify-center my-52 border pt-72 pb-24 rounded-tr-[10rem] rounded-bl-[10rem] lg:px-32 lg:py-14 lg:my-32">
+<section id="sub-details" class="relative flex items-center justify-center my-52 px-6 pt-72 pb-24 rounded-tr-[10rem] rounded-bl-[10rem] lg:px-32 lg:py-14 lg:my-32">
   <!-- Phone mockups -->
-  <div class="absolute -top-52 md:-top-12 md:left-20">
-    <img class="w-full lg:w-3/4" src="./images/illustration-phones.svg" alt="">
+  <div class="absolute -top-52 md:-top-40 md:left-24">
+    <img class="w-full" src="./images/illustration-phones.svg" alt="">
   </div>
   <!-- Flex Container Text -->
-  <div class="flex flex-col items-center text-center max-w-sm space-y-6 lg:max-w-lg lg:ml-auto lg:text-left lg:items-start">
+  <div class="flex flex-col items-center text-center space-y-6 lg:max-w-lg lg:ml-auto lg:text-left lg:items-start">
     <h1 class="text-5xl text-white lg:text-4xl">State of the Art Infrastructure</h1>
-    <p class="text-veryLightRedNav w-5/6 leading-8 lg:w-full">
+    <p class="text-lg text-veryLightRedNav leading-9 lg:w-full">
         With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
         This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
     </p>
+  </div>
+</section>
+
+<section id="details" class="px-6 lg:px-32 lg:py-44">
+  <!-- Flex Text Container -->
+  <div class="pt-96 space-y-10 text-center md:pt-0 md:p-10 md:max-w-xl md:ml-auto md:text-left">
+    <div class="space-y-6">
+      <h2 class="text-4xl text-veryDarkBlue">Free, open, simple</h2>
+      <p class="textblack opacity-70 leading-8">
+        Blogr is a free and open source application backed by a large community of helpful developers. It supports 
+        features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
+        and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
+      </p>
+    </div>
+    <div class="space-y-6">
+      <h2 class="text-4xl text-veryDarkBlue">Powerful tooling</h2>
+      <p class="textblack opacity-70 leading-8">
+        Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
+        capable of producing even the most complicated sites.
+      </p>
+    </div>
   </div>
 </section>
 
