--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
     <!-- Mobile Nav List -->
 <div class="mobile-nav flex flex-col items-center text-center bg-white px-6 py-10 space-y-8 absolute top-[400px] left-2/4 -translate-y-2/4 -translate-x-2/4 rounded-md md:hidden">
-
-      <div class="dropdown active w-full" data-dropdown>
+<!-- Dropdown 1 -->
+    <div class="dropdown active w-full" data-dropdown>
         <button class="text-veryDarkBlue font-bold focus:text-veryDarkBlue-600 focus:outline-none" data-dropdown-button>Product <i class="fas fa-chevron-down ml-1 text-introGradientVeryLightRed"></i></button>
 
           <div class="dropdown-menu hidden flex-col text-center space-y-2 bg-grayishBlue rounded-md py-5 px-6">
@@ -84,7 +84,7 @@
               <a class="text-veryDarkBlue-600 hover:font-bold hover:text-bodyGradientVeryDarkDesaturatedBlue" href="#">Integrations</a>
           </div>
     </div>
-
+<!-- Dropdown 2 -->
     <div class="dropdown active w-full" data-dropdown>
       <button class="text-veryDarkBlue font-bold focus:text-veryDarkBlue-600 focus:outline-none" data-dropdown-button>Company <i class="fas fa-chevron-down ml-1 text-introGradientVeryLightRed"></i></button>
 
@@ -94,17 +94,17 @@
             <a class="text-veryDarkBlue-600 hover:font-bold hover:text-bodyGradientVeryDarkDesaturatedBlue" href="#">Blog</a>
             <a class="text-veryDarkBlue-600 hover:font-bold hover:text-bodyGradientVeryDarkDesaturatedBlue" href="#">Careers</a>
         </div>
-  </div>
+    </div>
+<!-- Dropdown 3 -->
+    <div class="dropdown active w-full" data-dropdown>
+      <button class="text-veryDarkBlue font-bold focus:text-veryDarkBlue-600 focus:outline-none" data-dropdown-button>Connect <i class="fas fa-chevron-down ml-1 text-introGradientVeryLightRed"></i></button>
 
-  <div class="dropdown active w-full" data-dropdown>
-    <button class="text-veryDarkBlue font-bold focus:text-veryDarkBlue-600 focus:outline-none" data-dropdown-button>Connect <i class="fas fa-chevron-down ml-1 text-introGradientVeryLightRed"></i></button>
-
-      <div class="dropdown-menu hidden flex-col text-center space-y-2 bg-grayishBlue rounded-md py-5 px-6">
-          <a class="text-veryDarkBlue-600 hover:font-bold hover:text-bodyGradientVeryDarkDesaturatedBlue" href="#">Contact</a>
-          <a class="text-veryDarkBlue-600 hover:font-bold hover:text-bodyGradientVeryDarkDesaturatedBlue" href="#">Newsletter</a>
-          <a class="text-veryDarkBlue-600 hover:font-bold hover:text-bodyGradientVeryDarkDesaturatedBlue" href="#">LinkedIn</a>
-      </div>
-  </div>
+        <div class="dropdown-menu hidden flex-col text-center space-y-2 bg-grayishBlue rounded-md py-5 px-6">
+            <a class="text-veryDarkBlue-600 hover:font-bold hover:text-bodyGradientVeryDarkDesaturatedBlue" href="#">Contact</a>
+            <a class="text-veryDarkBlue-600 hover:font-bold hover:text-bodyGradientVeryDarkDesaturatedBlue" href="#">Newsletter</a>
+            <a class="text-veryDarkBlue-600 hover:font-bold hover:text-bodyGradientVeryDarkDesaturatedBlue" href="#">LinkedIn</a>
+        </div>
+    </div>
   <!-- Login Buttons -->
   <div class="flex flex-col border-t-2 border-grayishBlue w-full space-y-6 py-6">
     <button class="text-lg font-bold text-veryDarkBlue focus:outline-none">Login</button>
@@ -131,8 +131,7 @@
   </div>
 </div>
 </header>
-
-<!-- Design Section -->
+<!-- Design Section Starts Here -->
 <section id="design" class="py-14 px-6 md:py-52 lg:px-32 lg:mb-32">
   <!-- Heading -->
   <h1 class="text-4xl text-center mb-12 font-bold text-veryDarkBlue mt-20 md:mb-20">Designed for the future</h1>
@@ -161,7 +160,7 @@
     </div>
   </div>
 </section>
-
+<!-- Sub-details Starts Here -->
 <section id="sub-details" class="relative flex items-center justify-center my-52 px-6 pt-72 pb-24 rounded-tr-[10rem] rounded-bl-[10rem] lg:px-32 lg:py-14 lg:my-32">
   <!-- Phone mockups -->
   <div class="absolute -top-52 md:-top-40 md:left-24">
@@ -176,8 +175,8 @@
     </p>
   </div>
 </section>
-
-<section id="details" class="px-6 lg:px-32 lg:py-44">
+<!-- Details Section Starts Here -->
+<section id="details" class="my-10 px-6 lg:px-32 lg:py-44">
   <!-- Flex Text Container -->
   <div class="pt-96 space-y-10 text-center md:pt-0 md:p-10 md:max-w-xl md:ml-auto md:text-left">
     <div class="space-y-6">
@@ -197,91 +196,49 @@
     </div>
   </div>
 </section>
-
-
-
-
-
-
-  <!-- Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-
-  Contact
-  Newsletter
-  LinkedIn
+<!-- Footer Starts Here -->
+<footer id="footer" class="relative flex flex-col items-center space-y-16 bg-veryDarkBlackBlue py-24 px-20 rounded-tr-[10rem] md:flex-row md:justify-between md:items-start md:space-y-0 lg:px-32">
+  <!-- Logo img -->
+  <div class="md:w-1/4">
+    <img src="./images/logo.svg" alt="brand logo">
+  </div>
+  <!-- Footer Nav List Flex Container -->
+  <div class="flex flex-col items-center space-y-10 md:flex-row md:space-y-0 md:w-3/4 md:items-start md:justify-around">
+    <!-- List Item 1 -->
+    <div class="text-center space-y-6 md:text-left">
+      <h3 class="text-white font-bold">Product</h3>
+      <div class="text-gray-300 flex flex-col items-center space-y-2 md:items-start">
+        <a class="hover:text-white hover:underline" href="#">Overview</a>
+        <a class="hover:text-white hover:underline" href="#">Pricing</a>
+        <a class="hover:text-white hover:underline" href="#">Marketplace</a>
+        <a class="hover:text-white hover:underline" href="#">Features</a>
+        <a class="hover:text-white hover:underline" href="#">Integrations</a>
+      </div>
+    </div>
+    <!-- List Item 2 -->
+    <div class="text-center space-y-6 md:text-left">
+      <h3 class="text-white font-bold">Company</h3>
+      <div class="text-gray-300 flex flex-col items-center space-y-2 md:items-start">
+        <a class="hover:text-opacity-100" href="#">About</a> 
+        <a class="hover:text-white hover:underline" href="#">Team</a> 
+        <a class="hover:text-white hover:underline" href="#">Blog</a> 
+        <a class="hover:text-white hover:underline" href="#">Careers</a> 
+      </div>
+    </div>
+    <!-- List Item 3 -->
+    <div class="text-center space-y-6 md:text-left">
+      <h3 class="text-white font-bold">Connect</h3>
+      <div class="text-gray-300 flex flex-col items-center space-y-2 md:items-start">
+        <a class="hover:text-white hover:underline" href="#">Contact</a>
+        <a class="hover:text-white hover:underline" href="#">Newsletter</a>
+        <a class="hover:text-white hover:underline" href="#">LinkedIn</a>
+      </div>
+    </div>
+  </div>
+  <div class="text-gray-400 text-sm absolute bottom-5 left-2/4 text-center -translate-x-2/4 w-full">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a class="text-veryLightRed" href="https://imdawn.me/home" target="_blank">imDawn</a>.
+  </div>
+</footer>
   
-  Login
-  Sign Up
-
-  A modern publishing platform
-  Grow your audience and build your online brand
-
-  Start for Free
-  Learn More
-
-  Designed for the future
-
-  Introducing an extensible editor
-  Blogr features an exceedingly intuitive interface which lets you focus on one thing: creating content. 
-  The editor supports management of multiple blogs and allows easy manipulation of embeds such as images, 
-  videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or 
-  change the looks of a blog.
-
-  Robust content management
-  Flexible content management enables users to easily move through posts. Increase the usability of your blog 
-  by adding customized categories, sections, format, or flow. With this functionality, you’re in full control.
-
-  State of the Art Infrastructure
-  With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast connectivity. 
-  This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
-
-  Free, open, simple
-  Blogr is a free and open source application backed by a large community of helpful developers. It supports 
-  features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools, 
-  and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.
-
-  Powerful tooling
-  Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a breeze, but
-  capable of producing even the most complicated sites.
-
-  Product
-
-  Overview
-  Pricing
-  Marketplace
-  Features
-  Integrations
-
-  Company
-
-  About
-  Team
-  Blog
-  Careers
-
-  Connect
-  
-  Contact
-  Newsletter
-  LinkedIn
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
 </body>
 </html>
