updated the mobile version

--- a/index.html
+++ b/index.html
@@ -117,17 +117,17 @@
 <!-- Intro Text -->
 <div class="container flex flex-col items-center text-center mx-auto mt-auto mb-auto space-y-10">
   <!-- Intro Heading -->
-  <h1 class="text-5xl text-white md:text-7xl">
+  <h1 class="text-4xl text-white md:text-7xl">
     A modern publishing platform
   </h1>
   <!-- Intro Paragraph -->
-  <p class="text-2xl text-veryLightRedNav">
+  <p class="text-xl text-veryLightRedNav">
     Grow your audience and build your online brand
   </p>
   <!-- Intro CTA Buttons -->
-  <div class="space-x-6">
-    <button class="bg-white text-introGradientLightRed font-bold px-6 pt-3 pb-4 rounded-full hover:bg-veryLightRed hover:text-veryLightRedNav focus:outline-none">Start For Free</button>
-    <button class="bg-transparent text-white border font-bold px-6 pt-3 pb-4 rounded-full hover:bg-white hover:text-introGradientLightRed focus:outline-none">Learn More</button>
+  <div class="space-x-2 md:space-x-6">
+    <button class="text-sm bg-white text-introGradientLightRed font-bold px-6 pt-3 pb-4 rounded-full hover:bg-veryLightRed hover:text-veryLightRedNav focus:outline-none">Start For Free</button>
+    <button class="text-sm bg-transparent text-white border font-bold px-6 pt-3 pb-4 rounded-full hover:bg-white hover:text-introGradientLightRed focus:outline-none">Learn More</button>
   </div>
 </div>
 </header>
