--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     Grow your audience and build your online brand
   </p>
   <!-- Intro CTA Buttons -->
-  <div class="space-x-2 md:space-x-6">
+  <div class="space-x-6">
     <button class="text-sm bg-white text-introGradientLightRed font-bold px-6 pt-3 pb-4 rounded-full hover:bg-veryLightRed hover:text-veryLightRedNav focus:outline-none">Start For Free</button>
     <button class="text-sm bg-transparent text-white border font-bold px-6 pt-3 pb-4 rounded-full hover:bg-white hover:text-introGradientLightRed focus:outline-none">Learn More</button>
   </div>
